# fastapi-arangodb

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: __init__.py  security.py  user.py
app/api/middlewares/: authentication.py
app/common/: __init__.py  database.py  exceptions.py  logging.py  settings.py
app/config/: __init__.py  config.py  database.py  events.py
app/models/: auth.py  base.py  user.py
app/repository/: base.py  user.py
app/services/: security.py  user.py
